--- a/style.css
+++ b/style.css
@@ -82,19 +82,22 @@ body{
     height: 80%;
     width: 80%;
   }
-  .box4{
-    border: 7px solid red;
-    box-shadow: 5px 5px purple;
+  .middle3 {
+    border: 5px solid red;
+    box-shadow: 2px 2px purple
     border-radius: 18px;
     background-color: white;
     color: purple;
     text-shadow: 2px 2px grey;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    line-height: 5px;
+    line-height: 10px;
     position: absolute;
     top: 380px;
-
+    height: 20%;
+    width: 20%;
+    text-align: center;
+    
   }
   .box5{
     display: block;
